8/31　授業入力分

--- a/login/login.html
+++ b/login/login.html
@@ -26,7 +26,7 @@
 
         　ID　　　：<input type="text" name="userID" value="">
         <br>
-        　パスワード：<input type="text" name="password" value="">
+        　パスワード：<input type="password" name="password" value="">
 
         <button type="submit" name="operation" value="search" class="btn btn-primary">ログイン</button>
     </form>
