--- a/yamazaki/1_form.html
+++ b/yamazaki/1_form.html
@@ -49,7 +49,7 @@
                 <label class="form-check-label" for="check">Check box</label>
         </div>
 
-        <button type="submit" class="btn btn-primary">送信</button>
+        <button type="submit" class="btn btn-primary m-3">送信</button>
  
     </form>
 
